Fixed crash when getting location permission and fixed app name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
         <activity
             android:name=".PickUsername"
-            android:label="Pick A Username">
+            android:label="Landmark Remark">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
